// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches link to media fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "height": "1",
        "id": "id-existing",
        "kind": "image",
        "link_type": "Media",
        "name": "default.jpg",
        "size": "1",
        "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
        "width": "1",
      },
    },
  ],
}
`;

exports[`patches link to media fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "id-existing",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "id-existing",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
          "width": "1",
        },
        "group": [
          {
            "field": {
              "height": "1",
              "id": "id-existing",
              "kind": "image",
              "link_type": "Media",
              "name": "default.jpg",
              "size": "1",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
              "width": "1",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "id-existing",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "id-existing",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          "width": "1",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > existing > static zone 1`] = `
{
  "field": {
    "height": "1",
    "id": "id-existing",
    "kind": "image",
    "link_type": "Media",
    "name": "default.jpg",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1587502537745-84b86da1204f?w=6550&h=4367&fit=crop",
    "width": "1",
  },
}
`;

exports[`patches link to media fields > existingNonImage > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "kind": "document",
        "link_type": "Media",
        "name": "foo.pdf",
        "size": "1",
        "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
      },
    },
  ],
}
`;

exports[`patches link to media fields > existingNonImage > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "kind": "document",
            "link_type": "Media",
            "name": "foo.pdf",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "kind": "document",
          "link_type": "Media",
          "name": "foo.pdf",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "kind": "document",
              "link_type": "Media",
              "name": "foo.pdf",
              "size": "1",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > existingNonImage > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "kind": "document",
            "link_type": "Media",
            "name": "foo.pdf",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "kind": "document",
          "link_type": "Media",
          "name": "foo.pdf",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > existingNonImage > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "kind": "document",
    "link_type": "Media",
    "name": "foo.pdf",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1587502537745-84b86da1204f?w=6550&h=4367&fit=crop",
  },
}
`;

exports[`patches link to media fields > new > group 1`] = `
{
  "group": [
    {
      "field": {
        "height": "1",
        "id": "dfdd322ca9d",
        "kind": "image",
        "link_type": "Media",
        "name": "default.jpg",
        "size": "1",
        "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
        "width": "1",
      },
    },
  ],
}
`;

exports[`patches link to media fields > new > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "0eddbd0255b",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "0eddbd0255b",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
          "width": "1",
        },
        "group": [
          {
            "field": {
              "height": "1",
              "id": "0eddbd0255b",
              "kind": "image",
              "link_type": "Media",
              "name": "default.jpg",
              "size": "1",
              "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
              "width": "1",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > new > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "2beb55ec2f4",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1444464666168-49d633b86797?w=4844&h=3234&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "2beb55ec2f4",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1444464666168-49d633b86797?w=4844&h=3234&fit=crop",
          "width": "1",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > new > static zone 1`] = `
{
  "field": {
    "height": "1",
    "id": "bbad670dad7",
    "kind": "image",
    "link_type": "Media",
    "name": "default.jpg",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=7372&h=4392&fit=crop",
    "width": "1",
  },
}
`;

exports[`patches link to media fields > otherRepository > group 1`] = `
{
  "group": [
    {
      "field": {
        "height": "1",
        "id": "cfc26fe8d09",
        "kind": "image",
        "link_type": "Media",
        "name": "default.jpg",
        "size": "1",
        "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?w=6000&h=4000&fit=crop",
        "width": "1",
      },
    },
  ],
}
`;

exports[`patches link to media fields > otherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "61adcf1f5db",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "61adcf1f5db",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
          "width": "1",
        },
        "group": [
          {
            "field": {
              "height": "1",
              "id": "61adcf1f5db",
              "kind": "image",
              "link_type": "Media",
              "name": "default.jpg",
              "size": "1",
              "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
              "width": "1",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > otherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "4f4a69ff72d",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "4f4a69ff72d",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
          "width": "1",
        },
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > otherRepository > static zone 1`] = `
{
  "field": {
    "height": "1",
    "id": "b1d17b04a95",
    "kind": "image",
    "link_type": "Media",
    "name": "default.jpg",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
    "width": "1",
  },
}
`;

exports[`patches link to media fields > richTextExisting > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "height": "1",
                "id": "id-existing",
                "kind": "image",
                "link_type": "Media",
                "name": "default.jpg",
                "size": "1",
                "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                "width": "1",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link to media fields > richTextExisting > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "id-existing",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "id-existing",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "height": "1",
                      "id": "id-existing",
                      "kind": "image",
                      "link_type": "Media",
                      "name": "default.jpg",
                      "size": "1",
                      "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
                      "width": "1",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > richTextExisting > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "id-existing",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "id-existing",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > richTextExisting > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "height": "1",
            "id": "id-existing",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1587502537745-84b86da1204f?w=6550&h=4367&fit=crop",
            "width": "1",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "height": "1",
                "id": "dfdd322ca9d",
                "kind": "image",
                "link_type": "Media",
                "name": "default.jpg",
                "size": "1",
                "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                "width": "1",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "0eddbd0255b",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "0eddbd0255b",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "height": "1",
                      "id": "0eddbd0255b",
                      "kind": "image",
                      "link_type": "Media",
                      "name": "default.jpg",
                      "size": "1",
                      "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                      "width": "1",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "2beb55ec2f4",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1444464666168-49d633b86797?w=4844&h=3234&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "2beb55ec2f4",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1444464666168-49d633b86797?w=4844&h=3234&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "height": "1",
            "id": "bbad670dad7",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=7372&h=4392&fit=crop",
            "width": "1",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "height": "1",
                "id": "cfc26fe8d09",
                "kind": "image",
                "link_type": "Media",
                "name": "default.jpg",
                "size": "1",
                "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?w=6000&h=4000&fit=crop",
                "width": "1",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "b9dd0f2c3f8",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "61adcf1f5db",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "61adcf1f5db",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "height": "1",
                      "id": "61adcf1f5db",
                      "kind": "image",
                      "link_type": "Media",
                      "name": "default.jpg",
                      "size": "1",
                      "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
                      "width": "1",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "dignissim",
      "variation": "vitae",
      "version": "bfc9053",
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "306297c5eda",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "4f4a69ff72d",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "4f4a69ff72d",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Aliquet",
      "slice_type": "vel",
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "height": "1",
            "id": "b1d17b04a95",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            "width": "1",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;
